--- a/quiz.html
+++ b/quiz.html
@@ -64,22 +64,12 @@
                         <!-- Answer D to be populated here -->
                     </div>
                 </div>
-                <div class="next-q-link"><a href="#">Next Question</a></div>
+                <div class="next-q-link"><!-- Populate a link here with JS in case someone closes the modal without clicking next. only when correct answer guessed. link should be <a href="#">Next Question</a>--></div>
             </section>
             <aside class="col-xs-12 col-sm-2 order-sm-1">
-                <div class="side-widget text-center my-2 p-3">
-                    <h5>Points Available</h5>
-                    <p class="points-available">100</p>
-                </div>
-                <div class="side-widget text-center my-2 p-3">
-                    <h5>Your Score So Far</h5>
-                    <p class="current-score">0</p>
-                </div>
-                <div class="text-center my-2">
-                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal" data-bs-target="#howModal">?</button>
-                </div>
                 <div id="progress-bar" class="text-center">
-                    <h5>Distance in kilometers</h5>
+                    <h4>How far have you travelled?</h4>
+                    <p>Distance in kilometers</p>
                     <ul>
                         <div class="dot-label" id="dot10">0 km</div>
                         <div class="dot-line">|</div>
@@ -102,10 +92,19 @@
                         <div class="dot-label" id="dot1">5.91B</div>
                     </ul>
                 </div>
-            <div>
-                <p>Buttons to remove</p>
+                <div class="side-widget text-center my-2 p-3">
+                    <h5>Points Available</h5>
+                    <p class="points-available">100</p>
+                </div>
+                <div class="side-widget text-center my-2 p-3">
+                    <h5>Your Score So Far</h5>
+                    <p class="current-score">0</p>
+                </div>
+                <div class="text-center my-2">
+                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal" data-bs-target="#howModal">?</button>
+                </div>
+            <div class="text-center">
                 <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct Modal</button>
             </div>
         </aside>
     </main>
@@ -153,7 +152,7 @@
             </div>
         </div>
     </div>
-
+    <div class="delete-this"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct Modal</button></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
