--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AstroQuiz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.cdnfonts.com/css/procyon?styles=164763" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/fauna?styles=159199" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/drius?styles=164403" rel="stylesheet">
@@ -64,7 +65,9 @@
                         <!-- Answer D to be populated here -->
                     </div>
                 </div>
-                <div class="next-q-link"><!-- Populate a link here with JS in case someone closes the modal without clicking next. only when correct answer guessed. link should be <a href="#">Next Question</a>--></div>
+                <div class="next-q-link">
+                    <!-- Populate a link here with JS in case someone closes the modal without clicking next. only when correct answer guessed. link should be <a href="#">Next Question</a>-->
+                </div>
             </section>
             <aside class="col-xs-12 col-sm-2 order-sm-1">
                 <div id="progress-bar" class="text-center">
@@ -101,12 +104,13 @@
                     <p class="current-score">0</p>
                 </div>
                 <div class="text-center my-2">
-                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal" data-bs-target="#howModal">?</button>
+                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal"
+                        data-bs-target="#howModal">?</button>
                 </div>
-            <div class="text-center">
-                <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
-            </div>
-        </aside>
+                <div class="text-center">
+                    <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
+                </div>
+            </aside>
     </main>
     <footer class="container mt-4">
         <div class="row">
@@ -116,6 +120,7 @@
         </div>
     </footer>
     <!-- Modals -->
+    <!-- Modals for Corect Answers-->
     <div class="modal fade quiz-modal" id="correctModal" tabindex="-1" aria-labelledby="correctModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
@@ -124,13 +129,8 @@
                     <h3 class="modal-title fs-5" id="correctModalLabel">Correct!</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <h4 class="modal-dyk-subheading">Did you know?</h4>
-                    <p class="modal-dyk"></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button id="next-question" type="button" class="btn btn-success">Next Question</button>
+                <div id="modalb1" class="modal-body">
+                    <!-- Additional content can go here if needed -->
                 </div>
             </div>
         </div>
@@ -152,7 +152,8 @@
             </div>
         </div>
     </div>
-    <div class="delete-this"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct Modal</button></div>
+    <div class="delete-this"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
+            data-bs-target="#correctModal">Correct Modal</button></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
