--- a/quiz.html
+++ b/quiz.html
@@ -22,10 +22,6 @@
                     <img src="images/astro.png" alt="planet" height="40" class="mr-2">
                     AstroQuiz
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </div>
     </nav>
@@ -38,11 +34,15 @@
         </div>
     </header>
     <!-- Main / Quiz Area -->
-    <main class="container-md quiz-tablet mt-5 p-4">
+    <main class="container-md quiz-tablet my-xs-1 my-lg-4 p-4">
         <div class="row">
-            <section class="col-xs-12 col-sm-10 order-sm-2">
+            <section class="col-xs-12 col-lg-10 order-lg-2">
                 <div id="question-image" class="image-container text-center">
                     <!-- div for displaying NASA images -->
+                </div>
+                <div class="img-caption tablet-box pt-2 pb-1 px-2 my-2">
+                    <p class="p-caption"></p>
+                    <p class="p-dyk"><!-- facts will be populated here --></p>
                 </div>
                 <div id="question-box" class="question tablet-box mt-3 mb-3 p-4">
                     <!-- Question to be populated here -->
@@ -65,50 +65,55 @@
                         <!-- Answer D to be populated here -->
                     </div>
                 </div>
-                <div class="next-q-link">
-                    <!-- Populate a link here with JS in case someone closes the modal without clicking next. only when correct answer guessed. link should be <a href="#">Next Question</a>-->
-                </div>
             </section>
-            <aside class="col-xs-12 col-sm-2 order-sm-1">
-                <div id="progress-bar" class="text-center">
-                    <h4>How far have you travelled?</h4>
-                    <p>Distance in kilometers</p>
-                    <ul>
-                        <div class="dot-label" id="dot10">0 km</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot9">384K</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot8">58M</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot7">108M</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot6">228M</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot5">778M</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot4">1.43B</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot3">2.87B</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot2">4.50B</div>
-                        <div class="dot-line">|</div>
-                        <div class="dot-label" id="dot1">5.91B</div>
-                    </ul>
+            <aside class="col-xs-12 col-lg-2 order-lg-1">
+                <div class="row">
+                    <div class="text-center my-2">
+                        <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal"
+                            data-bs-target="#howModal">?</button>
+                    </div>
                 </div>
-                <div class="side-widget text-center my-2 p-3">
-                    <h5>Points Available</h5>
-                    <p class="points-available">100</p>
+                <div class="row">
+                    <div class="side-widget text-center my-2 mx-2 p-3 col col-xs-6 col-lg-12">
+                        <h5>Points Available</h5>
+                        <p class="points-available">100</p>
+                    </div>
+                    <div class="side-widget text-center my-2 mx-2 p-3 col col-xs-6 col-lg-12">
+                        <h5>Your Score So Far</h5>
+                        <p class="current-score">0</p>
+                    </div>
                 </div>
-                <div class="side-widget text-center my-2 p-3">
-                    <h5>Your Score So Far</h5>
-                    <p class="current-score">0</p>
+                <div class="row">
+                    <div id="progress-bar" class="side-widget text-center mx-2 my-2 p-3 col col-xs-12">
+                        <h4>You have travelled...</h4>
+                        <div>
+                            <div class="dot-label" id="dot10">0 km</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot9">384K</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot8">58M</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot7">108M</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot6">228M</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot5">778M</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot4">1.43B</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot3">2.87B</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot2">4.50B</div>
+                            <div class="dot-line">|</div>
+                            <div class="dot-label" id="dot1">5.91B</div>
+                        </div>
+                        <p>kilometers!</p>
+                    </div>
                 </div>
-                <div class="text-center my-2">
-                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal"
-                        data-bs-target="#howModal">?</button>
-                </div>
-                <div class="text-center">
-                    <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
+                <div class="row">
+                    <div class="text-center col col-xs-12 mt-3">
+                        <button id="btn-abort" class="btn btn-danger"><a href="/">Abort Mission</a></button>
+                    </div>
                 </div>
             </aside>
     </main>
@@ -120,13 +125,13 @@
         </div>
     </footer>
     <!-- Modals -->
-    <!-- Modals for Corect Answers-->
+    <!-- Modal for Corect Answers-->
     <div class="modal fade quiz-modal" id="correctModal" tabindex="-1" aria-labelledby="correctModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title fs-5" id="correctModalLabel">Correct!</h3>
+                    <h3 class="modal-title fs-5 text-center" id="correctModalLabel">Correct!</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div id="modalb1" class="modal-body">
@@ -152,8 +157,6 @@
             </div>
         </div>
     </div>
-    <div class="delete-this"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
-            data-bs-target="#correctModal">Correct Modal</button></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
