--- a/quiz.html
+++ b/quiz.html
@@ -7,9 +7,7 @@
     <title>AstroQuiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://fonts.cdnfonts.com/css/procyon?styles=164763" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/fauna?styles=159199" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/drius?styles=164403" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -18,21 +16,13 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100">
-                <a class="navbar-brand d-flex align-items-center" href="/">
+                <a class="navbar-brand d-flex align-items-center" href="/index.html">
                     <img src="images/astro.png" alt="planet" height="40" class="mr-2">
                     AstroQuiz
                 </a>
             </div>
         </div>
     </nav>
-    <!-- Header -->
-    <header class="container">
-        <div class="row">
-            <div class="col">
-                <!-- delete later if we don't need a header -->
-            </div>
-        </div>
-    </header>
     <!-- Main / Quiz Area -->
     <main class="container-md quiz-tablet my-xs-1 my-lg-4 p-4">
         <div class="row">
@@ -117,13 +107,6 @@
                 </div>
             </aside>
     </main>
-    <footer class="container mt-4">
-        <div class="row">
-            <div class="col">
-                <!--delete later if we don't need a footer-->
-            </div>
-        </div>
-    </footer>
     <!-- Modals -->
     <!-- Modal for Corect Answers-->
     <div class="modal fade quiz-modal" id="correctModal" tabindex="-1" aria-labelledby="correctModalLabel"
